--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ serde ={ version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 rustc-hash = "1.1"
 num-traits = "^0.2.19"
-indexmap = "2.0"
+indexmap = {version = "2.0", features=["serde"]}
